# Megatron

./: .gitignore  CLAUDE.md  README.md  done.by.opus.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  weekly-update.yml
configs/: sweep_v1.yaml  transformer_ptsw.yaml  transformer_ptsw_through2022.yaml  transformer_ptsw_through2023.yaml  transformer_ptsw_through2024.yaml  transformer_smoke.yaml  transformer_stdw.yaml  transformer_stdw_through2022.yaml  transformer_stdw_through2023.yaml  transformer_stdw_through2024.yaml  transformer_v1.yaml  transformer_v1_through2019.yaml  transformer_v1_through2020.yaml  transformer_v1_through2021.yaml  transformer_v1_through2022.yaml  transformer_v1_through2023.yaml  transformer_v1_through2024.yaml  transformer_v2.yaml  transformer_v2_through2022.yaml  transformer_v2_through2023.yaml  transformer_v2_through2024.yaml
models/backtests/: bakeoff.json  baselines.json  board_backtest.json
notebooks/: train_loss_rebalance_kaggle.ipynb  train_studio_lab.ipynb  train_v2_kaggle.ipynb
site/: about.html  index.html  weekly.html
tests/: test_board.py  test_calibrate.py  test_configs.py  test_consensus.py  test_dataset.py  test_diagnose.py  test_eval.py  test_eval_rookies.py  test_features.py  test_future.py  test_generate.py  test_harness.py  test_loss_configs.py  test_loss_rebalance.py  test_net.py  test_predictor.py  test_pull.py  test_rankings.py  test_rookie.py  test_scoring.py  test_simulate.py  test_site_about.py  test_site_draft.py  test_site_weekly.py  test_sleeper.py  test_sweep.py  test_train.py  test_xgb.py
(+145 files in other folders)
