[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ffmodel"
version = "0.1.0"
description = "Fantasy football projection model: quantile transformer vs. baselines"
requires-python = ">=3.10"
dependencies = [
    "nflreadpy>=0.1",
    "pandas>=2.0",
    "pyarrow>=14",
    "xgboost>=2.0",
    "scikit-learn>=1.3",
    "torch>=2.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: hits the network for real nflverse data"]
addopts = "-m 'not integration'"
